version/0.19/_sources/api/solver/_autosummary/settings/electrolyte_sigma.rst.txt
:orphan:

.. _electrolyte_sigma:

electrolyte_sigma
=================

.. autoclass:: ansys.fluent.core.solver.settings_241.electrolyte_sigma.electrolyte_sigma
    :show-inheritance:

.. rubric:: Attributes

==================================   ===================================

Attribute                                                        Summary

==================================   ===================================
:ref:`method <method_4>`                 Select method for the property.

:ref:`value <value_1>`                                    'value' child.

:ref:`user_defined <user_defined>`                 'user_defined' child.

==================================   ===================================

.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`p2d_model_settings <p2d_model_settings>`       'p2d_model_settings' child.

==============================================   ===============================

